# fault-detection-system

./: .gitignore  CMakeLists.txt  README.md  build.bat  fault_detection_details.md  launch.py  requirements.txt
codegen/: codegen.py
codegen/templates/: fault_ids.hpp.jinja2  fault_ids.py.jinja2  message.hpp.jinja2  message.py.jinja2
common/: fault_ids.json
common/messages/: garage_door_command.json  garage_door_response.json  temperature_control_unit_command.json  temperature_control_unit_response.json
config/: devices.json
device_simulator/: CMakeLists.txt  README.md
device_simulator/src/: DeviceSimulator.cpp  DeviceSimulator.hpp  GarageDoor.cpp  GarageDoor.hpp  IDevice.hpp  TemperatureControlUnit.cpp  TemperatureControlUnit.hpp  UdpSocket.cpp  UdpSocket.hpp  main.cpp
device_simulator/tests/: test_garage_door.cpp  test_temperature_control_unit.cpp
gui/: README.md  main.py
gui/app/: ConfigLoader.py  DeviceCardWidget.py  DevicePanelWidget.py  FaultInjector.py  LogViewerWidget.py  MainWindow.py
gui/tests/: test_config_loader.py  test_fault_injector.py
monitor/: CMakeLists.txt  README.md
monitor/src/: ConfigLoader.cpp  ConfigLoader.hpp  DeviceProxy.cpp  DeviceProxy.hpp  FaultLogger.cpp  FaultLogger.hpp  FaultStateTracker.cpp  FaultStateTracker.hpp  Monitor.cpp  Monitor.hpp  UdpSocket.cpp  UdpSocket.hpp  main.cpp
monitor/tests/: test_config_loader.cpp  test_device_proxy.cpp  test_fault_logger.cpp  test_fault_state_tracker.cpp
